# Algorithms---Problem-Solving-Level-4

./: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/check/: CMakeLists.txt
libraries/check/include/: check.hpp
libraries/check/src/: check.cpp
libraries/date/: CMakeLists.txt
libraries/date/include/: ReadDate.hpp  StringDate.hpp  compare.hpp  date.hpp  decrease.hpp  display.hpp  increase.hpp  period.hpp  validation.hpp  work.hpp
libraries/date/src/: ReadDate.cpp  StringDate.cpp  compare.cpp  date.cpp  decrease.cpp  display.cpp  increase.cpp  period.cpp  validation.cpp  work.cpp
libraries/enums/: CMakeLists.txt
libraries/enums/include/: enum.hpp  enums.hpp
libraries/enums/src/: enums.cpp
libraries/include/: InputValidation.hpp  check.hpp  enums.hpp  utils.hpp
libraries/input/: CMakeLists.txt
libraries/input/include/: InputNumber.hpp  InputString.hpp  InputValidation.hpp
libraries/input/src/: InputNumber.cpp  InputString.cpp  InputValidation.cpp
libraries/src/: InputValidation.cpp  check.cpp  utils.cpp
libraries/utils/include/: utils.hpp
libraries/utils/src/: utils.cpp
problem/01_number_to_text/: CMakeLists.txt
problem/01_number_to_text/src/: main.cpp
problem/02_leap_year/: CMakeLists.txt
problem/02_leap_year/src/: main.cpp
problem/03_numbers_of_days_hours_minutes_seconds_in_a_year/: CMakeLists.txt
problem/03_numbers_of_days_hours_minutes_seconds_in_a_year/src/: main.cpp
problem/04_number_of_days_hours_minutes_seconds_in_a_month/: CMakeLists.txt
problem/04_number_of_days_hours_minutes_seconds_in_a_month/src/: main.cpp
problem/05_number_of_days_in_a_month_short_logic/: CMakeLists.txt
problem/05_number_of_days_in_a_month_short_logic/src/: main.cpp
problem/06_day_name/: CMakeLists.txt
problem/06_day_name/src/: main.cpp
problem/07_month_calendar/: CMakeLists.txt
problem/07_month_calendar/src/: main.cpp
problem/08_year_calendar/: CMakeLists.txt
problem/08_year_calendar/src/: main.cpp
problem/09_days_from_beginning_of_year/: CMakeLists.txt
problem/09_days_from_beginning_of_year/src/: main.cpp
problem/10_date_from_day_order_in_a_year/: CMakeLists.txt
problem/10_date_from_day_order_in_a_year/src/: main.cpp
problem/11_add_days_to_date/: CMakeLists.txt
problem/11_add_days_to_date/src/: main.cpp
problem/12_date_1_less_than_date_2/: CMakeLists.txt
problem/12_date_1_less_than_date_2/src/: main.cpp
problem/13_date_1_equal_date_2/: CMakeLists.txt
problem/13_date_1_equal_date_2/src/: main.cpp
problem/14_last_day_last_month/: CMakeLists.txt
problem/14_last_day_last_month/src/: main.cpp
problem/15_increase_date_by_in_day/: CMakeLists.txt
problem/15_increase_date_by_one_day/: CMakeLists.txt
problem/15_increase_date_by_one_day/src/: main.cpp
problem/16_diff_in_days/: CMakeLists.txt
problem/16_diff_in_days/src/: main.cpp
problem/17_your_age_in_days/: CMakeLists.txt
problem/17_your_age_in_days/src/: main.cpp
problem/18_diff_in_days_negative_days/: CMakeLists.txt
problem/19_increase_date_by_x_days/: CMakeLists.txt
problem/19_increase_date_by_x_days/src/: main.cpp
problem/20_increase_date_by_one_week/: CMakeLists.txt
problem/21_increase_date_by_x_week/: CMakeLists.txt
problem/22_increase_date_by_one_month/: CMakeLists.txt
problem/23_increase_date_by_x_month/: CMakeLists.txt
problem/24_increase_date_by_one_year/: CMakeLists.txt
problem/25_increase_date_by_x_year/: CMakeLists.txt
problem/26_increase_date_by_x_year_faster/: CMakeLists.txt
problem/27_increase_date_by_one_decade/: CMakeLists.txt
problem/27_increase_date_by_one_year_decade/: CMakeLists.txt
problem/28_increase_date_by_x_decade/: CMakeLists.txt
problem/29_increase_date_by_x_decade_faster/: CMakeLists.txt
problem/30_increase_date_by_one_century/: CMakeLists.txt
problem/31_increase_date_by_one_millennium/: CMakeLists.txt
problem/32_decrease_date_by_in_day/: CMakeLists.txt
problem/32_decrease_date_by_one_day/: CMakeLists.txt
problem/33_decrease_date_by_x_days/: CMakeLists.txt
problem/34_decrease_date_by_one_week/: CMakeLists.txt
problem/35_decrease_date_by_x_week/: CMakeLists.txt
problem/36_decrease_date_by_one_month/: CMakeLists.txt
problem/37_decrease_date_by_x_month/: CMakeLists.txt
problem/38_decrease_date_by_one_year/: CMakeLists.txt
problem/39_decrease_date_by_x_year/: CMakeLists.txt
problem/40_decrease_date_by_x_year_faster/: CMakeLists.txt
problem/41_decrease_date_by_one_decade/: CMakeLists.txt
problem/42_decrease_date_by_x_decade/: CMakeLists.txt
problem/43_decrease_date_by_x_decade_faster/: CMakeLists.txt
problem/44_decrease_date_by_one_century/: CMakeLists.txt
problem/45_decrease_date_by_one_millennium/: CMakeLists.txt
problem/46_end_of_week/: CMakeLists.txt
problem/47_week_end/: CMakeLists.txt
problem/48_business_day/: CMakeLists.txt
problem/49_days_until_the_end_of_week/: CMakeLists.txt
problem/50_days_until_the_end_of_month/: CMakeLists.txt
problem/51_days_until_the_end_of_year/: CMakeLists.txt
problem/52_calculate_vacation_days/: CMakeLists.txt
problem/53_calculate_vacation_return_date/: CMakeLists.txt
problem/54_date_1_after_date_2/: CMakeLists.txt
problem/55_compare_date_function/: CMakeLists.txt
problem/56_overlap_periods/: CMakeLists.txt
problem/57_period_length_in_days/: CMakeLists.txt
problem/58_date_within_period/: CMakeLists.txt
problem/59_count_overlap_days/: CMakeLists.txt
problem/60_read_print_date_string/: CMakeLists.txt
problem/61_format_date/: CMakeLists.txt
projects/02_leap_year/: CMakeLists.txt
(+46 files in other folders)
