cmake_minimum_required(VERSION 3.22)
project(MainProject)

add_subdirectory(libraries/check)
add_subdirectory(libraries/date)
add_subdirectory(libraries/enums)
add_subdirectory(libraries/input)
add_subdirectory(libraries/utils)

add_subdirectory(problem/01_number_to_text)
add_subdirectory(problem/02_leap_year)
add_subdirectory(problem/03_numbers_of_days_hours_minutes_seconds_in_a_year)
add_subdirectory(problem/04_number_of_days_hours_minutes_seconds_in_a_month)
add_subdirectory(problem/05_number_of_days_in_a_month_short_logic)
add_subdirectory(problem/06_day_name)
add_subdirectory(problem/07_month_calendar)
add_subdirectory(problem/08_year_calendar)
add_subdirectory(problem/09_days_from_beginning_of_year)
add_subdirectory(problem/10_date_from_day_order_in_a_year)
add_subdirectory(problem/11_add_days_to_date)
add_subdirectory(problem/12_date_1_less_than_date_2)
add_subdirectory(problem/13_date_1_equal_date_2)
add_subdirectory(problem/14_last_day_last_month)
add_subdirectory(problem/15_increase_date_by_in_day)
add_subdirectory(problem/16_diff_in_days)
add_subdirectory(problem/17_your_age_in_days)
add_subdirectory(problem/18_diff_in_days_negative_days)
add_subdirectory(problem/19_increase_date_by_x_days)
add_subdirectory(problem/20_increase_date_by_one_week)