cmake_minimum_required(VERSION 3.22)
project(MainProject)

add_subdirectory(libraries/check)
add_subdirectory(libraries/date)
add_subdirectory(libraries/enums)
add_subdirectory(libraries/input)
add_subdirectory(libraries/utils)

add_subdirectory(problem/01_number_to_text)
add_subdirectory(problem/02_leap_year)
add_subdirectory(problem/03_numbers_of_days_hours_minutes_seconds_in_a_year)
add_subdirectory(problem/04_number_of_days_hours_minutes_seconds_in_a_month)
add_subdirectory(problem/05_number_of_days_in_a_month_short_logic)
add_subdirectory(problem/06_day_name)
add_subdirectory(problem/07_month_calendar)
add_subdirectory(problem/08_year_calendar)
add_subdirectory(problem/09_days_from_beginning_of_year)
add_subdirectory(problem/10_date_from_day_order_in_a_year)
add_subdirectory(problem/11_add_days_to_date)
add_subdirectory(problem/12_date_1_less_than_date_2)
add_subdirectory(problem/13_date_1_equal_date_2)
add_subdirectory(problem/14_last_day_last_month)
add_subdirectory(problem/15_increase_date_by_one_day)
add_subdirectory(problem/16_diff_in_days)
add_subdirectory(problem/17_your_age_in_days)
add_subdirectory(problem/18_diff_in_days_negative_days)
add_subdirectory(problem/19_increase_date_by_x_days)
add_subdirectory(problem/20_increase_date_by_one_week)
add_subdirectory(problem/21_increase_date_by_x_week)
add_subdirectory(problem/22_increase_date_by_one_month)
add_subdirectory(problem/23_increase_date_by_x_month)
add_subdirectory(problem/24_increase_date_by_one_year)
add_subdirectory(problem/25_increase_date_by_x_year)
add_subdirectory(problem/26_increase_date_by_x_year_faster)
add_subdirectory(problem/27_increase_date_by_one_decade)
add_subdirectory(problem/28_increase_date_by_x_decade)
add_subdirectory(problem/29_increase_date_by_x_decade_faster)
add_subdirectory(problem/30_increase_date_by_one_century)
add_subdirectory(problem/31_increase_date_by_one_millennium)
add_subdirectory(problem/32_decrease_date_by_one_day)
add_subdirectory(problem/33_decrease_date_by_x_days)
add_subdirectory(problem/34_decrease_date_by_one_week)
add_subdirectory(problem/35_decrease_date_by_x_week)
add_subdirectory(problem/36_decrease_date_by_one_month)
add_subdirectory(problem/37_decrease_date_by_x_month)
add_subdirectory(problem/38_decrease_date_by_one_year)
add_subdirectory(problem/39_decrease_date_by_x_year)
add_subdirectory(problem/40_decrease_date_by_x_year_faster)
add_subdirectory(problem/41_decrease_date_by_one_decade)
add_subdirectory(problem/42_decrease_date_by_x_decade)
add_subdirectory(problem/43_decrease_date_by_x_decade_faster)
add_subdirectory(problem/44_decrease_date_by_one_century)
add_subdirectory(problem/45_decrease_date_by_one_millennium)
add_subdirectory(problem/46_end_of_week)
add_subdirectory(problem/47_week_end)
add_subdirectory(problem/48_business_day)
add_subdirectory(problem/49_days_until_the_end_of_week)
add_subdirectory(problem/50_days_until_the_end_of_month)
add_subdirectory(problem/51_days_until_the_end_of_year)
add_subdirectory(problem/52_calculate_vacation_days)
add_subdirectory(problem/53_calculate_vacation_return_date)
add_subdirectory(problem/54_date_1_after_date_2)